--- a/index.html
+++ b/index.html
@@ -4,33 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV dindacha</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #ffff;
-        }
-        .container {
-            padding: 20px;
-        }
-        .header img {
-            border-radius: 50%;
-            max-width: 200px;
-        }
-        .header {
-            display: flex;
-            justify-content: space-between;
-        }
-    </style>
 </head>
 
-<body>
-    <div class="container">
-        <div class="header">
+<body style="font-family: Arial, sans-serif; background-color: #efcbcb;">
+    <div class="container" style="max-width: 800px; margin: 0 auto; padding: 20px; background-color: #ffffff; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+        <div class="header" style="display: flex; justify-content: space-between;">
             <div>
                 <h1>Dinda Chairunisa Darmadi</h1>
                 <p>Denpasar, 13 March 2003</p>
             </div>
-            <img src="dind.png" alt="img">
+            <img src="dind.png" alt="img" style="border-radius: 50%; max-width: 200px;">
         </div>
 
         <h2>Education</h2>
@@ -56,7 +39,6 @@
         <div class="contact">
             <h2>Contact Information</h2>
             <p>Email: dindacha3@gmail.com</p>
-            <p>Phone: 085695470495 </p>
             <p>LinkedIn: www.linkedin.com/in/dindacha</p>
         </div>
     </div>
